WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13264
REGRESSION: Crash when canceling about:blank in Activity viewer
https://bugs.webkit.org/show_bug.cgi?id=13264
Summary
REGRESSION: Crash when canceling about:blank in Activity viewer
Charles Gaudette
Reported
2007-04-03 01:33:41 PDT
Repeatable crash using
r20675
(not yet tested in other builds). STEPS: (1)
http://www.techcrunch.com/
(2) open "Activity" from Window menu (3) Cancel either of the "about:blank" line items using the "X", (4) Safari/WebKit beach-balls and then crashes.
Attachments
reduction
(236 bytes, text/html)
2007-04-04 05:37 PDT
,
Antti Koivisto
no flags
Details
slightly smaller reduction
(214 bytes, text/html)
2007-04-04 07:17 PDT
,
Antti Koivisto
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-04-03 02:46:23 PDT
Confirmed with
r20493
. Thread 0 Crashed: 0 WebCore::FrameLoader::stopAllLoaders() + 21 1 -[NSApplication sendAction:to:from:] + 107 2 0x1000 + 172163 3 -[NSControl sendAction:to:] + 101 4 -[NSCell _sendActionFrom:] + 168 5 -[NSCell trackMouse:inRect:ofView:untilMouseUp:] + 1271 6 -[NSButtonCell trackMouse:inRect:ofView:untilMouseUp:] + 848 7 -[NSTableView mouseDown:] + 3495 8 -[NSOutlineView mouseDown:] + 757 9 0x1000 + 286481
Mark Rowe (bdash)
Comment 2
2007-04-03 06:17:58 PDT
<
rdar://problem/5107536
>
Antti Koivisto
Comment 3
2007-04-04 05:37:10 PDT
Created
attachment 13945
[details]
reduction Also "Toolbar" and "Cool jobs" pop-ups show up empty in ToT. I think this is caused by the same reason as those hanging about:blank loads.
Antti Koivisto
Comment 4
2007-04-04 07:17:31 PDT
Created
attachment 13946
[details]
slightly smaller reduction Removing an iframe from the document leaves a hanging load in activity viewer. This happens even if that load was already in completed state when the iframe was removed.
Anders Carlsson
Comment 5
2007-04-04 10:47:42 PDT
Committed revision 20703.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug