        Reviewed by John.

<rdar://problem/5107536>
        http://bugs.webkit.org/show_bug.cgi?id=13264
        REGRESSION: Crash when canceling about:blank in Activity viewer

        * WebView/WebFrame.mm:
        (-[WebFrame stopLoading]):
        Add a null check for the frame loader - it can be null when the frame has been disconnected
        from the web page.



Canonical link: https://commits.webkit.org/17357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20703 268f45cc-cd09-0410-ab3c-d52691b4dbfc